Fix T47973: Render stamp ignores font alpha